--- a/docs/_includes/home/hero.html
+++ b/docs/_includes/home/hero.html
@@ -10,7 +10,7 @@
     </div>
   </div>
   <div class="Homepage-Hero--banner Homepage--containerOffset">
-    <span class="alert">Developers!</span> <span class="bold">Koding is NOT an online IDE.</span> We are providing a modern dev environment for teams. <a href="#">Read more.</a>
+    <span class="alert">Developers!</span> <span class="bold">Koding is NOT an online IDE.</span> We are providing a modern dev environment for teams. <a href="https://blog.koding.com/koding-is-not-an-online-ide-e2693f740ce8#.6z3ny6fsb">Read more.</a>
   </div>
 </main>
 <a class='Homepage--mobile-cta' href='{{ site.url }}/demo'>REQUEST A DEMO</a>
