Copy changes to footer, and grammatical changes to use cases

--- a/docs/_includes/footer.html
+++ b/docs/_includes/footer.html
@@ -7,9 +7,9 @@
     <div class="Footer--col">
       <h3>For Teams</h3>
       <ul>
-        <li><a href="{{ site.url }}/verticals/training">Software Training</a></li>
+        <li><a href="{{ site.url }}/verticals/training">Platform for Training</a></li>
         <!-- <li><a href="{{ site.url }}/verticals/hackathons">Hackathons</a></li> -->
-        <li><a href="{{ site.url }}/verticals/trial">Trial Software</a></li>
+        <li><a href="{{ site.url }}/verticals/trial">Pre-Sales Automation</a></li>
         <!-- <li><a href="{{ site.url }}/verticals/digital-agency">Digital Agency</a></li> -->
         <!-- <li><a href="{{ site.url }}/verticals/classrooms">Classrooms</a></li> -->
         <!-- <li><a href="{{ site.url }}/verticals/api-sdk">API integrations</a></li> -->
