banner styling and target blank

--- a/docs/_css/home/hero.scss
+++ b/docs/_css/home/hero.scss
@@ -52,6 +52,7 @@ main.Homepage-Hero {
   padding: 30px;
   background-color: rgba(0,0,0,.6);
   box-sizing: border-box;
+  border-top: 1px solid rgba(255, 255, 255, .15);
 
   .alert {
     color: #f2778a;
