Fix responsive heading in Trials

--- a/docs/css/trial.scss
+++ b/docs/css/trial.scss
@@ -483,7 +483,7 @@ p {
     }
   }
 
-  .Section-4 {
+  .Section.Section-4 {
     padding-top: 164px;
   }
 }
@@ -601,7 +601,7 @@ p {
     }
   }
 
-  .Section-4 {
+  .Section.Section-4 {
     padding-top: 122px;
 
     h3 {
@@ -736,7 +736,7 @@ p {
     }
   }
 
-  .Section-4 {
+  .Section.Section-4 {
     padding-top: 62px;
 
     a {
