--- a/docs/_includes/home/hero.html
+++ b/docs/_includes/home/hero.html
@@ -7,6 +7,7 @@
         <a class="cta secondary" href="{{ site.url }}/demo">Request a Demo</a>
         <a class="cta" href="{{ site.url }}/teams/create">Sign Up</a>
       </div>
+      <a class="vision showModal" data-youtube-id="2COxlWQ0J1U" href="#"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 48 48"><use xlink:href="#video-play-button"></use></svg>Koding's Vision</a>
     </div>
   </div>
   <div class="Homepage-Hero--banner Homepage--containerOffset">
