--- a/client/home/lib/styl/homestacks.styl
+++ b/client/home/lib/styl/homestacks.styl
@@ -69,6 +69,7 @@ $borderColor                = rgba(151, 151, 151, .52)
     borderizeListItems      25px, 1px solid $borderColor
 
 .HomeAppView--scroller.stacks
+.HomeAppView--scroller.add-ons
 
   .kdtabhandlecontainer
     abs                     0px 0 0 0px
@@ -156,4 +157,3 @@ $borderColor                = rgba(151, 151, 151, .52)
 
       a
         margin-left         20px
-
