Style: support added for font-awesome

--- a/client/new-stack-editor/lib/styl/main.styl
+++ b/client/new-stack-editor/lib/styl/main.styl
@@ -1,3 +1,8 @@
+
+// FontAwesome
+$fa-font-path = "http://netdna.bootstrapcdn.com/font-awesome/4.7.0/fonts"
+@import "../../../node_modules/font-awesome-stylus/stylus"
+
 @css {
 /*
 New Stack Editor stylesheet
