--- a/docs/_css/home/hero.scss
+++ b/docs/_css/home/hero.scss
@@ -8,7 +8,6 @@ main.Homepage-Hero {
 .Homepage-Hero--container {
   padding-top: 215px;
   position: relative;
-  z-index: 1;
 }
 .Homepage-Hero--intro {
   max-width: 850px;
@@ -33,8 +32,7 @@ main.Homepage-Hero {
     margin-top: 40px;
   }
   a {
-    &.secondary {
-      margin: 0 20px 10px 0;
+    transition: transform .1s ease, box-shadow .1s ease;
     }
     &.vision {
       color: rgba(255,255,255,0.7);
@@ -55,6 +53,17 @@ main.Homepage-Hero {
   }
 }
 
+.Homepage-Hero--intro,
+.Homepage-Hero--video,
+.Homepage-Hero--banner {
+  opacity: 1;
+  transition: opacity .5s ease;
+  z-index: 1;
+  &.out {
+    opacity: 0;
+    z-index: 0;
+  }
+}
 .Homepage-Hero--banner {
   position: absolute;
   bottom: 0;
@@ -66,6 +75,11 @@ main.Homepage-Hero {
   background-color: rgba(0,0,0,.6);
   box-sizing: border-box;
   border-top: 1px solid rgba(255, 255, 255, .15);
+  transition: transform .5s ease, opacity .5s ease;
+  &.out {
+    transform: translateY(100%);
+    opacity: 0;
+  }
 
   .alert {
     color: #f2778a;
