client: jekyll: header signup style fix

--- a/docs/_includes/css/header.css
+++ b/docs/_includes/css/header.css
@@ -96,18 +96,21 @@ body {
 }
 
 .Homepage-Header .signup {
-  background-color: #18C6DB;
-  color: rgba(0,0,0,0.39);
+  background-color: transparent;
+  color: white;
   text-transform: uppercase;
   font-weight: bold;
   padding-left: 35px;
   padding-right: 35px;
   text-decoration: none;
+  border: 1px solid rgba(255,255,255,.44);
+  box-sizing: border-box;
+  opacity: 1;
+  transition: opacity .5s ease;
 }
 
 .Homepage-Header .signup:hover, .Homepage-Header .signup:active {
-  background-color: rgba(24, 198, 219, .8);
-  color: rgba(0,0,0,0.39);
+  background-color: rgba(255, 255, 255, .1);
 }
 
 .Homepage-Header .signup svg {
@@ -196,7 +199,7 @@ body {
     border: 0;
   }
   .Homepage-Header .signup {
-    display: flex;
+    display: none;
     background-color: transparent;
     border-left-width: 1px;
     border-right-width: 1px;
