--- a/docs/_includes/home/hero.html
+++ b/docs/_includes/home/hero.html
@@ -19,34 +19,32 @@
 </main>
 <a class='Homepage--mobile-cta' href='{{ site.url }}/demo'>REQUEST A DEMO</a>
 <script>
-
+var onYouTubeIframeAPIReady;
+(function(){
   var $items = $('header, .Homepage-Hero--intro, .Homepage-Hero--banner'),
       $wrapper = $('.Homepage-Hero--video'),
       $trigger = $('a.vision'),
       $close = $('.Homepage-Hero--video a.close'),
       player, timer;
 
-  function onYouTubeIframeAPIReady() {
+  onYouTubeIframeAPIReady = function() {
     player = new YT.Player('koding-vision', {
-        events: {
-          'onReady': function(){
-            console.log('ready');
-          },
-          'onStateChange': function(event) {
-            var UNSTARTED = -1, // (unstarted)
-                ENDED     = 0,  // (ended)
-                PLAYING   = 1,  // (playing)
-                PAUSED    = 2,  // (paused)
-                BUFFERING = 3,  // (buffering)
-                VIDEOCUED = 5;  // (video cued)
-            if (event.data == ENDED) {
-              hideVideo();
-            }
-            if (event.data == PAUSED) {
-              timer = setTimeout(hideVideo, 10000);
-            }
+      events: {
+        onStateChange: function(event) {
+          var UNSTARTED = -1, // (unstarted)
+              ENDED     = 0,  // (ended)
+              PLAYING   = 1,  // (playing)
+              PAUSED    = 2,  // (paused)
+              BUFFERING = 3,  // (buffering)
+              VIDEOCUED = 5;  // (video cued)
+          if (event.data == ENDED) {
+            hideVideo();
+          }
+          if (event.data == PAUSED) {
+            timer = setTimeout(hideVideo, 10000);
           }
         }
+      }
     });
   }
 
@@ -54,12 +52,14 @@
     event.preventDefault();
     $items.addClass('out');
     $wrapper.removeClass('out');
-    player.playVideo();
+    if (player && player.playVideo) {
+      player.playVideo();
+    }
     return false;
   }
 
   function hideVideo(pause, event) {
-    if (pause) {
+    if (player && player.pauseVideo && pause) {
       player.pauseVideo();
       if (timer) {
         clearTimeout(timer);
@@ -76,10 +76,11 @@
   $trigger.click(showVideo);
   $close.click(hideVideo.bind(this, true));
 
-  $(window).scroll(function(event){
+  $(window).scroll(function(){
     if (window.scrollY > 780){
       hideVideo(true);
     }
-  })
+  });
+})();
 
 </script>
