client: jekyll: remove origin for youtube video for http redirects

--- a/docs/_includes/home/hero.html
+++ b/docs/_includes/home/hero.html
@@ -1,6 +1,6 @@
 <main class="Homepage-Hero">
   <div class="Homepage-Hero--video out">
-    <iframe id="koding-vision" width="1262px" height="710px" src="https://www.youtube.com/embed/2COxlWQ0J1U?autoplay=0&modestbranding=1&rel=0&showinfo=0&enablejsapi=1&origin={{ site.url }}" frameborder="0" allowfullscreen></iframe>
+    <iframe id="koding-vision" width="1262px" height="710px" src="https://www.youtube.com/embed/2COxlWQ0J1U?autoplay=0&modestbranding=1&rel=0&showinfo=0&enablejsapi=1" frameborder="0" allowfullscreen></iframe>
     <a class="close" href="#"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16"><use xlink:href="#icon-video-close"></use></svg></a>
   </div>
   <div class="Homepage--container Homepage-Hero--container Homepage--containerOffset">
