--- a/docs/_includes/home/hero.html
+++ b/docs/_includes/home/hero.html
@@ -1,7 +1,9 @@
 <main class="Homepage-Hero">
   <div class="Homepage-Hero--video out">
-    <iframe id="koding-vision" width="1262px" height="710px" src="https://www.youtube.com/embed/2COxlWQ0J1U?autoplay=0&modestbranding=1&rel=0&showinfo=0&enablejsapi=1" frameborder="0" allowfullscreen></iframe>
-    <a class="close" href="#"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16"><use xlink:href="#icon-video-close"></use></svg></a>
+    <div>
+      <iframe id="koding-vision" width="1262px" height="710px" src="https://www.youtube.com/embed/2COxlWQ0J1U?autoplay=0&modestbranding=1&rel=0&showinfo=0&enablejsapi=1" frameborder="0" allowfullscreen></iframe>
+      <a class="close" href="#"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16"><use xlink:href="#icon-video-close"></use></svg></a>
+    </div>
   </div>
   <div class="Homepage--container Homepage-Hero--container Homepage--containerOffset">
     <div class="Homepage-Hero--intro">
