client: jekyll: fix svg colors

--- a/docs/_css/home/halves.scss
+++ b/docs/_css/home/halves.scss
@@ -30,6 +30,9 @@
   line-height: 28px;
   text-align: center;
   box-sizing: border-box;
+  svg {
+    fill: #aab2b9;
+  }
   &.analytics svg {
     margin-bottom: 51px;
     width: 63px;
