--- a/docs/_css/home/hero.scss
+++ b/docs/_css/home/hero.scss
@@ -40,6 +40,9 @@ main.Homepage-Hero {
       transform: scale(1.05);
       box-shadow: 0 10px 30px rgba(0,0,0,0.5);
     }
+    &.cta {
+      background-color: #f2778a;
+    }
     &.vision {
       margin: 0 20px 10px 0;
       background: rgba(255,255,255,.15) url('/assets/img/landing/home/button-vision@2x.png') 50% 50% no-repeat;
