home: update default team logo

--- a/client/home/lib/styl/homemyteam.styl
+++ b/client/home/lib/styl/homemyteam.styl
@@ -80,7 +80,7 @@ homemyteam.styl
     bg                      color, transparent
     bg                      position, center center
     bg                      repeat, no-repeat
-    r-sprite                app upload_image
+    r-sprite                app default_team_logo
     &.member
       r-sprite              home team_logo_default_lock
 
