--- a/client/app/lib/styl/resurrection.styl
+++ b/client/app/lib/styl/resurrection.styl
@@ -92,18 +92,25 @@ pre
         rel()
 
       .logo-wrapper
+
         .team-logo-wrapper
-          size              40px, 40px
-          display           flex
-          align-content     center
-          justify-content   center
-          abs               0px 0 0 0px
           .team-logo
-            max-width       100%
-            max-height      100%
-            height          auto
-            flex            0 0 auto
-            align-self      center
+            size                    40px, 40px
+            dFlex()
+            -webkit-align-content   center
+            align-content           center
+            -webkit-justify-content center
+            justify-content         center
+            img
+              max-width             100%
+              max-height            100%
+              height                auto
+              flex                  0 0 auto
+              rounded               4px
+
+
+          .default
+            r-sprite              app, team_logo
 
         .nickname
           abs()
