make sideabar header all area clickable

--- a/client/app/lib/styl/resurrection.styl
+++ b/client/app/lib/styl/resurrection.styl
@@ -118,23 +118,19 @@ pre
           left              46px
           font-size         13px
           color             #989898
-          &.no-logo
-            left            16px
 
         .team-name
           abs()
-          left              47px
-          height            16px
+          padding-left      43px
+          height            30px
           color             #b3b3b3
           margin-top        10px
           font-size         13px
           text-transform    capitalize
-          width             calc(100% - 70px)
+          width             calc(100% - 80px)
           background        none
           cursor            pointer
-          &.no-logo
-            left            18px
-
+          z-index           10
           noTextDeco()
           ellipsis()
           dIBlock()
