--- a/client/new-stack-editor/lib/views/flexsplit/styl/main.styl
+++ b/client/new-stack-editor/lib/views/flexsplit/styl/main.styl
@@ -1,6 +1,6 @@
 .flex-split
 
-  overflow                  auto
+  overflow                  hidden
   dFlex()
 
   &.vertical
@@ -25,5 +25,5 @@
     dFlex()
 
   .flex-view
-    overflow                auto
+    overflow                hidden
     borderBox()
