--- a/docs/_css/home/content-with-video.scss
+++ b/docs/_css/home/content-with-video.scss
@@ -21,6 +21,7 @@
   cursor: pointer;
   transition: transform .1s ease, box-shadow .1s ease;
   border-radius: 6px;
+  overflow: hidden;
   &:hover {
     transform: scale(1.05);
     box-shadow: 0 10px 30px rgba(0,0,0,.5);
